kubernetes/apps/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: keycloak
    namespace: keycloak
spec:
    type: ClusterIP
    ports:
        - name: http
          port: 8080
          targetPort: http
          protocol: TCP
    selector:
        app: keycloak
