kubernetes/apps/keycloak/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: keycloak
spec:
    type: ClusterIP
    ports:
        - port: 5432
          targetPort: 5432
          protocol: TCP
    selector:
        app: postgres
